--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1 class="title">나주금천중학교</h1>
     <div class="box">
       <h4>오늘의 급식</h3>
-      <h1 class="menu">LOADING...</h1>
+      <h1 class="menu info">LOADING...</h1>
     </div>
     <div class="box">
       <h4>오늘의 시간표</h3>
-      <h1 class="timetable">DEVELOPING...</h1>
+      <h1 class="schedule info">DEVELOPING...</h1>
     </div>
-    <script src="timetable.js"></script>
     <script src="schoolMeal.js"></script>
+    <script src="timetable.js"></script>
   </body>
 </html>
