시간표 수정

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="box">
       <h4>오늘의 시간표</h3>
-      <h1 class="schedule info">DEVELOPING...</h1>
+      <h1 class="schedule info">LOADING...</h1>
     </div>
     <script src="schoolMeal.js"></script>
     <script src="timetable.js"></script>
