--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   </head>
   <body>
     <h1 class="title">나주금천중학교</h1>
-    <div class="box">
-      <h4>오늘의 급식</h3>
-      <h1 class="menu info">LOADING...</h1>
-    </div>
-    <div class="box">
-      <h4>오늘의 시간표</h3>
-      <h1 class="timetable info">LOADING...</h1>
+    <div>
+      <div class="box">
+        <h4>오늘의 급식</h3>
+        <h1 class="menu info">LOADING...</h1>
+      </div>
+      <div class="box">
+        <h4>오늘의 시간표</h3>
+        <h1 class="timetable info">LOADING...</h1>
+      </div>
     </div>
     <script src="schoolMeal.js"></script>
     <script src="timetable.js"></script>
